# dome-rs

./: Cargo.toml  Makefile  README.md
.cursor/rules/: crate-readmes.mdc
crates/core/: Cargo.toml  README.md
crates/core/src/: beat.rs  color.rs  config.rs  lib.rs  migration.rs
crates/engine/: README.md
crates/engine/src/: lib.rs  scheduler.rs
crates/inputs/: README.md
crates/inputs/src/: audio.rs  lib.rs  link.rs  midi.rs  orientation.rs
crates/outputs/: Cargo.toml  README.md
crates/outputs/src/: lib.rs  opc.rs  simulator.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: lib.rs
crates/test-support/: README.md
crates/test-support/src/: lib.rs
crates/visualizers/: README.md
docker/ci/: README.md
docs/: architecture.md  configuration.md  fixture-capture.md  hardware-mapping.md  hardware-readiness.md  intentional-deviations.md  parity-closure.md  porting-inventory.md  testing.md  ui-expectations.md
examples/: bench_frame.rs  domers.toml
fixtures/: README.md  manifest.json
fixtures/orientation/: datagram_lengths.json
fixtures/spectrum-csharp/: bar_stage_topology.json  dome_geometry.json  dome_mapping.json  executable_capture.json  visualizer_sequence_cases.json
src/: lib.rs
tests/integration/: config_cli.rs  no_hardware_e2e.rs
tools/: build_spectrum_csharp.py  capture_spectrum_executable_fixtures.py  capture_spectrum_visualizer_frames.py  check_dev_deps.py  extract_spectrum_fixtures.py  install_dev_deps.sh
ui/: check.mjs  index.html  main.mjs  package.json  simulator.html
ui/src/: main.tsx  styles.css
(+13 files in other folders)
