[package]
name = "domers-outputs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
domers-core = { path = "../core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["io-util", "macros", "net", "rt-multi-thread"] }

[lints]
workspace = true
